# test-fast-api

./: docker-compose.yml  pyproject.toml
app/: main.py
app/configs/: __init__.py  database.py  dependencies.py  redis.py  settings.py
app/routers/: users.py
app/schemas/: users.py
app/utils/: models.py
app/utils/routers/: __init__.py  create.py  default.py  delete.py  list.py  update.py
